# anti-drone-guidance-system

./: .gitignore  LICENSE  README.md  pyproject.toml
1_初期/: README.md  nmpc_module.py  pn_guidance_2D.py  pn_guidance_3D.py  pn_guidance_3D_variable_speed.py  pn_guidance_low_frequency.py
1_初期/pn_nmpc_guidance/: main.py  nmpc.py  plotting.py  speed_control.py
1_初期/pn_nmpc_guidance_deprecated/: __init__.py  config.py  pn_guidance.py  simulation.py  target_model.py  utils.py
2_中期/: README.md
2_中期/MAVSDK示例/: follow.py  manual_control.py
2_中期/MAVSDK示例/offboard/: offboard_from_csv.py
2_中期/guidance_system/: PNGuidance.py  connec_test.py
3_ROS2/: README.md
3_ROS2/src/offboard_test/: package.xml  setup.py
3_ROS2/src/offboard_test/offboard_test/: offboard_takeoff_node.py  offboard_test_node.py
3_ROS2/src/ros2_guidance_system/: package.xml  setup.cfg  setup.py
3_ROS2/src/ros2_guidance_system/config/: pn_guidance_params.yaml
3_ROS2/src/ros2_guidance_system/launch/: pn_guidance_launch.py
3_ROS2/src/ros2_guidance_system/ros2_guidance_system/: pn_guidance_node.py
3_ROS2/src/ros2_guidance_system/test/: test_pn_guidance_ned.py
4_fsm/: README.md
4_fsm/src/fsmpx4/: README.md  package.xml
4_fsm/src/fsmpx4/config/: fsm.yaml
4_fsm/src/fsmpx4/include/: input.h  param_loader.h  types.h
4_fsm/src/fsmpx4/src/: control.cpp  fsm_node.cpp  fsmpx4.cpp  input.cpp
4_fsm/src/fsmpx4/test/: point_control_node.cpp  test_input.cpp
4_fsm/src/pixhawk/src/: offboard_px4.cpp  px4_node.cpp
4_fsm/src/pixhawk_py/: MIGRATION_MAP.md  README.md  package.xml
4_fsm/src/pixhawk_py/resource/: pixhawk_py
4_参考代码/fsmpx4/: CMakeLists.txt
4_参考代码/fsmpx4/include/: control.h  fsmpx4.h
4_参考代码/fsmpx4/launch/: fsmpx4_fsm.launch.py  point_control.launch.py
4_参考代码/fsmpx4/msg/: FSMDebug.msg
4_参考代码/fsmpx4/src/: debug.cpp  param_loader.cpp
4_参考代码/pixhawk/: CMakeLists.txt  package.xml
4_参考代码/pixhawk/include/pixhawk/: offboard_px4.hpp
4_参考代码/pixhawk/src/: offboard_px4.cpp
5_AntiDrone/: README.md
5_AntiDrone/src/anti_drone_guidance/: package.xml  setup.cfg  setup.py
5_AntiDrone/src/anti_drone_guidance/anti_drone_guidance/: anti_drone_guidance_node.py  gazebo_evaluator.py  pn_guidance_core.py  target_provider.py
5_AntiDrone/src/anti_drone_guidance/config/: pn_guidance_params.yaml
5_AntiDrone/src/anti_drone_guidance/launch/: pn_guidance_launch.py
5_AntiDrone/src/pixhawk_py/: README.md  setup.cfg  setup.py
5_AntiDrone/src/pixhawk_py/pixhawk_py/: __init__.py  main.py  offboard_px4.py
6_Simulation/: README.md  main.py  plot_gazebo_csv.py
6_Simulation/doc/: simulation_overview.md
6_Simulation/docs/: algorithm_framework_rationale.md  simulation_overview.md  simulation_section_outline.md
6_Simulation/reference/: guidance_algorithm_references.bib  guidance_algorithm_references.md
6_Simulation/src/gazebosimulation/: README.md  package.xml  setup.cfg  setup.py
6_Simulation/src/gazebosimulation/config/: default.yaml
6_Simulation/src/gazebosimulation/gazebosimulation/: __init__.py  coordinates.py  guidance_node.py  px4_utils.py
6_Simulation/src/gazebosimulation/launch/: guidance.launch.py
6_Simulation/src/pythonsimulation/: __init__.py  config.py  depth_camera.py  dynamics.py  guidance.py  math_utils.py  metrics.py  plotting.py  replay.py  simulation.py  state.py  target.py
7_2Dsimulation/: README.md  main.py  plot_gazebo_csv.py
7_2Dsimulation/docs/: 2d_simulation_guidance_overview.md
7_2Dsimulation/src/gazebosimulation2d/: README.md  package.xml  setup.cfg  setup.py
7_2Dsimulation/src/gazebosimulation2d/config/: default.yaml
7_2Dsimulation/src/gazebosimulation2d/gazebosimulation2d/: __init__.py  coordinates.py  guidance_node.py  px4_utils.py
7_2Dsimulation/src/gazebosimulation2d/launch/: guidance.launch.py
7_2Dsimulation/src/pythonsimulation2d/: __init__.py  config.py  dynamics.py  guidance.py  math_utils.py  metrics.py  plotting.py  simulation.py  state.py  target.py
8_MoCap/: README.md
8_MoCap/src/px4_mocap_hover/: README.md  package.xml  setup.cfg  setup.py
8_MoCap/src/px4_mocap_hover/launch/: mocap_arm_test.launch.py  mocap_bridge.launch.py  mocap_circle.launch.py  mocap_hover.launch.py  mocap_tracker.launch.py  mocap_trajectory_recorder.launch.py  mocap_trajectory_replay.launch.py
8_MoCap/src/px4_mocap_hover/px4_mocap_hover/: __init__.py  arm_test_mission.py  arm_test_node.py  circle_mission.py  circle_node.py  mission.py  mocap_bridge_node.py  mocap_trajectory_recorder_node.py  node.py  sample_gate.py  stability.py  tracker_control.py  tracker_mission.py  tracker_node.py  trajectory_csv.py  trajectory_replay.py  trajectory_replay_mission.py  trajectory_replay_node.py  transforms.py
8_MoCap/src/px4_mocap_hover/test/: test_arm_test_mission.py  test_circle_mission.py  test_mission.py  test_sample_gate.py  test_stability.py  test_tracker_control.py  test_tracker_mission.py  test_trajectory_csv.py  test_trajectory_replay.py  test_trajectory_replay_mission.py  test_transforms.py
