<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_guidance_system</name>
  <version>0.1.0</version>
  <description>基于比例导引(PN)算法的反无人机拦截系统 ROS2 包</description>
  <maintainer email="15303332860@163.com">honor</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
